# job-parse

./: .gitignore  LICENSE  README.md  build_exe.py  pyproject.toml  requirements.txt  vacancies.db
job_parse/: __main__.py
job_parse/analytics/: salary.py  stats.py
job_parse/cli/: app.py
job_parse/config/: settings.py
job_parse/export/: exporter.py
job_parse/gui/: analytics_tab.py  app.py  export_tab.py  list_tab.py  log_console.py  parse_tab.py  settings_store.py
job_parse/parsers/: base.py  geekjob.py  habr.py  hh.py  rabota.py  selenium_base.py  superjob.py  trudvsem.py
job_parse/proxy/: manager.py
job_parse/storage/: db.py
jop_parse/: __main__.py
jop_parse/analytics/: salary.py  stats.py
jop_parse/cli/: app.py
jop_parse/config/: settings.py
jop_parse/export/: exporter.py
jop_parse/models/: vacancy.py
jop_parse/parsers/: base.py  habr.py  hh.py
jop_parse/proxy/: manager.py
jop_parse/storage/: db.py
