[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "jop_parse"
version = "1.0.0"
description = "Умный парсер вакансий с аналитикой (HH.ru, Habr Career)"
authors = [{ name = "jop_parse" }]
requires-python = ">=3.11"
dependencies = [
    "undetected-chromedriver>=3.5.5",
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "httpx>=0.26.0",
    "numpy>=1.26.0",
]

[project.scripts]
jop_parse = "jop_parse.__main__:main"
