[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "job-parse"
version = "1.0.0a1"
description = "Умный парсер вакансий с аналитикой (HH.ru, Habr Career, SuperJob, GeekJob, Rabota, Trudvsem)"
authors = [{ name = "nench-ru" }]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "undetected-chromedriver>=3.5.5",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "httpx>=0.26.0",
    "numpy>=1.26.0",
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
]

[project.scripts]
job_parse = "job_parse.__main__:main"
